# SC-A-LOAM

./: .gitignore  CMakeLists.txt  package.xml
include/scancontext/: Iss_dtec.h
launch/: 16test.launch  16testgm.launch  32testgm.launch  64test.launch  aloam_velodyne_HDL_32_gm.launch  aloam_velodyne_HDL_64.launch  aloam_velodyne_VLP_16.launch  aloam_velodyne_gm.launch
msg/: Float64MultiArrayArray.msg  KPAndDescriptor.msg  KPAndSurroundPC.msg  LCPair.msg  LocalMapAndPose.msg  MapAndDescriptors.msg  PointCloud2List.msg
rviz_cfg/: aloam_velodyne.rviz
src/: graphMatching.py  graphMatching_SG.py  laserMapping.cpp  laserPosegraphOptimization.cpp  lib_test.cpp  localGlobalDescriptor.cpp  localGlobalGraphMatching.cpp  localGlobalMatcing.cpp  point_cloud_KP.pcd  point_cloud_Sorround.pcd  pygmtoolsMatchingTest.py  rops_feature.cpp  s.txt  scLoopDetector.cpp  scanRegistration.cpp
src/models/: matching.py  superglue.py  utils.py
